# otus-2.0-homework-01

./: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_gtest.cpp  version.h.in
